_sass/_layout.scss
/* ... */
.content {
	margin-top: $top-navbar-height;
	min-height: 200px;
	font-family: $font-family;
	line-height: 30px;
	font-size: 18px;
  margin-left: 45px;
  margin-right: 45px;

	h2 {
		color: #555;
		font-weight: 300;
		font-size: 36px;
		line-height: 40px;
		text-align: left;
		margin-bottom: 30px;
		text-shadow: 1px 1px 1px #fff;
	}

	p {
		font-weight: 300;
		color: #757575;
	}
}

.jumbotron {
	background: url(/assets/images/bg3.png) no-repeat center center;
	background-size: cover;
	text-shadow: 2px 2px 2px #000;
	text-align: center;
  margin-left: -45px;
  margin-right: -45px;

	.container {
		position: relative;
	}

	p {
		margin-top: 50px;
		line-height: 40px;
		font-size: 26px;
		color: #fff;
	}

	#banner-award {
	    position: absolute;
	    top: -10px;
	    right: 10px;
	    z-index: 1111;
	    background-color: transparent;
	    font-size: 20px;
	    width: 180px;
	    line-height: 26px;
	    padding: 0 10px 10px 10px;
	    color: #fff;
	    text-shadow: none;

	    .description {
	    	margin-top: 5px;
	    	background-color: transparent;
	    }

	    img {
	    	width: 80px;
	    }

	    @media screen and (max-width: 992px) {
	    	display: none;
	    }
	}


	@media screen and (max-width: 380px) {
		img {
			width: 100%;
		}
	}
}

@media screen and (min-width: 768px) {
	.container {
		width: 720px;
	}
}

@media screen and (min-width: 992px) {
	.container {
		width: 970px;
	}
}

@media screen and (min-width: 1200px) {
	.container {
		width: 1170px;
	}
}

input.form-control {
	height: 35px;
	background: #fff;
	padding-left: 5px;
	padding-right: 5px;
	font-size: 16px;

	&:focus {
		height: 35px;
		background: transparent;
		padding-left: 5px;
		padding-right: 5px;
		font-size: 16px;
	};
}
select.form-control, select.form-control:focus {
  height: 35px;
  background: #fff;
  padding-left: 5px;
  padding-right: 5px;
  font-size: 16px;
  border-bottom: 1px solid #757575;
}

blockquote.quote {
  	background: #f9f9f9;
  	border-left: 10px solid $base-color;
  	margin: 35px 0 0 0;
  	padding: 10px 10px;
  	quotes: "\201C""\201D""\2018""\2019";

  	&:before {
  		color: $base-color;
	  	content: "\201C";
	  	font-size: 4em;
	  	line-height: 0.1em;
	  	margin-right: 0.25em;
	  	vertical-align: -0.4em;
	}

	p {
	  display: inline;
	}

	h4 {
		font-weight: normal;
		font-size: 20px;
		line-height: 26px;
		margin-top: 25px;
		text-align: right;
		text-shadow: 1px 1px 1px #fff;
		font-style: italic;

		.name {
			font-weight: bold;
		}
	}
}

.btn {
	color: #fff;
	background-color: $base-color;
	text-shadow: none;

	&.btn-normal-lg {
		height: 55px;
		line-height: 40px;
		font-size: 22px;
		min-width: 200px;
	}

	&.btn-extra-lg {
		height: 70px;
		line-height: 55px;
		font-size: 26px;
		min-width: 200px;
	}

	&:hover {
		color: rgba(255, 255, 255, 0.85);
	}

	&:focus {
		color: rgba(255, 255, 255, 0.85);
	}
}

#mce-error-response {
	color: #E10909;
}

#mce-success-response {
	color: #009502;
}

.jumbotron.subtitle {
	background: lighten($base-color, 10%);
	margin: 0 0 30px 0;
	padding: 60px 0 0 0;
  margin-left: -45px;
  margin-right: -45px;

	h1 {
		color: #fff;
		font-family: $font-family;
		font-size: 50px;
		line-height: 70px;
		text-shadow: 2px 2px 2px #000;
		text-align: left;
	}

	@media screen and (max-width: 768px) {
		padding: 0;
	}
}

#post {
	img {
		width: 100%;
	}
}

#partners {
	.grayscale {
		-webkit-filter: grayscale(1);
	    -webkit-filter: grayscale(100%);
	    filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale");
	    opacity: 0.5;
	    margin: 5px auto;
	}
}

.twitter-kumuluz {
	color: #fff;
	font-size: 20px;
	font-family: $font-family;
	line-height: 40px;
	font-weight: bold;
	height: 40px;
	padding: 0;

	&:hover {
		text-decoration: none;
		color: #fff;
		//background-color: lighten($base-color, 15%);
	}

	&:visited {
		text-decoration: none;
		color: #fff;
	};
}

#duke-award {
	.image {
		float:left;
		position: relative;
		width: 15%;

		@media screen and (max-width: 1000px) {
			width: 20%;
		}

		@media screen and (max-width: 800px) {
			display: none;
		}
	}

	.description {
		float:left;
		position: relative;
		width: 85%;

		@media screen and (max-width: 1000px) {
			width: 80%;
		}

		@media screen and (max-width: 800px) {
			width: 100%;
		}
	}
}

ul.share-buttons{
    list-style: none;
    position: fixed;
    padding: 0;
    left: 0;
    top: 40%;
    z-index: 1;

	li{
		margin-bottom: 5px;
	}

	a {
		border: 0;
		text-decoration: none;
		opacity: 0.7;
		filter: alpha(opacity=70);
		margin-left: 3px;
		position: relative;
		top: -10px;
		-webkit-transition: all .3s ease;
		-moz-transition: all .3s ease;
		-o-transition: all .3s ease;
		-ms-transition: all .3s ease;
		transition: all .3s ease;
		&:hover {
			opacity: 1;
			filter: alpha(opacity=100);
		}
	}
}

#partners{
	background-color: #FFFFFF;
	padding-top: 20px;
	padding-bottom: 10px;
	text-align: center;

	ul.partners-list{
		list-style: none;

		li{
			display: inline;
			margin-right: 30px;
			img{
				display: inline;
			}
		}
	}
}

#footer-white {
	background: $base-color;
	color: #fff;
	margin-top: 100px;
	padding-top: 30px;
	padding-bottom: 50px;
	font-family: $font-family;
	font-size: 16px;
	line-height: 20px;
	-webkit-font-smoothing: antialiased;
  margin-left: -45px;
  margin-right: -45px;

	@media(max-width: 991px) {
		padding-top: 30px;
	}

	.copyright{
		line-height: 20px;

		@media(max-width: 767px) {
			text-align: center;
			margin: auto;
			margin-bottom: 5px;
			width: 80%;
		}
	}

	.social {
		text-align: right;
		height: 40px;
		padding: 0;

		@media(max-width: 767px){
			text-align: center;
			margin: auto;
			width: 80%;
		}
	}
}
/* ... */

